//
// Copyright 2019 Asylo authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto2";

package asylo;

import "asylo/crypto/algorithms.proto";

// A public encryption key.
message AsymmetricEncryptionKey {
  // Asymmetric encryption scheme used by |public_key|. Required.
  optional AsymmetricEncryptionScheme encryption_scheme = 1;

  // Encoding of |public_key|. Required.
  optional PublicKeyEncoding encoding = 2;

  // An encoded public encryption key. Required.
  optional bytes public_key = 3;
}
